--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version": 2,
     "builds": [
-        { "src": "api/chat.js", "use": "@vercel/node" },
-        { "src": "*.html", "use": "@vercel/static" }
+      { "src": "*.html", "use": "@vercel/static" },
+      { "src": "backend/server.js", "use": "@vercel/node" }
     ],
     "routes": [
-        { "src": "/api/chat", "dest": "api/chat.js" },
-        { "src": "/(.*)", "dest": "/$1" }
+      { "src": "/api/(.*)", "dest": "backend/server.js" },
+      { "src": "/(.*)", "dest": "/$1" }
     ]
-}
+  }
